Fix horizontal scroll for index desktop

--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -110,15 +110,15 @@
 
 @media (min-width: 1150px) {
   .about__wrapper {
-    width: 1150px;
-    padding-left: 225px;
-    padding-right: 225px;
+    width: 1133px;
+    padding-left: 217px;
+    padding-right: 215px;
     padding-top: 60px;
   }
 
   .about__title {
     .font-set(53px, 700, 57px);
-    margin-bottom: 100px;
+    margin-bottom: 102px;
   }
 
   .about__item {
