--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -157,7 +157,7 @@
 
 @media (min-width: 1150px) {
   .contact__wrapper {
-    width: 1150px;
+    width: 1133px;
     height: 631px;
     padding-top: 68px;
     padding-left: 175px;
@@ -201,7 +201,6 @@
 
   .contact__map-wrapper {
     order: 1;
-    margin-right: 13px;
     width: 525px;
     background-image: url("../img/map-desktop@1x.jpg");
     background-size: 525px 457px;
@@ -216,7 +215,7 @@
   }
 
   .contact__link {
-    margin-left: 50px;
+    margin-left: 43px;
     margin-right: 0;
   }
 }
