--- a/source/less/blocks/cute-things.less
+++ b/source/less/blocks/cute-things.less
@@ -90,7 +90,8 @@
   .cute-things__link {
     width: 334px;
     padding-top: 27px;
-    padding-left: 35px;
+    padding-bottom: 35px;
+    padding-left: 37px;
     padding-right: 140px;
     line-height: 30px;
     background-image: url("../img/bg-zigzag-fill.svg");
@@ -114,7 +115,7 @@
   }
 
   .cute-things__wrapper {
-    width: 1150px;
+    width: 1133px;
   }
 
   .cute-things__title {
