--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -143,7 +143,8 @@
   }
 
   .feedback__link {
-    margin-top: 10px;
+    margin-top: 8px;
+    margin-right: 0;
   }
 
   .feedback__text {
