--- a/source/less/blocks/good-card.less
+++ b/source/less/blocks/good-card.less
@@ -145,7 +145,7 @@
 @media (min-width: 1150px) {
   .good-card {
     width: 100%;
-    padding-top: 120px;
+    padding-top: 118px;
     padding-bottom: 95px;
   }
 
@@ -185,7 +185,7 @@
   }
 
   .good-card__price {
-    padding-left: 7px;
+    padding-left: 5px;
   }
 
   .good-card__button {
