--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -131,6 +131,7 @@
       padding-top: 8px;
       padding-bottom: 0;
       margin: 0 75px;
+      margin-right: 102px;
     }
 
     &:nth-child(2) {
@@ -144,6 +145,7 @@
 
     &:nth-child(3) {
       order: 2;
+      margin-left: 35px;
       padding-left: 35px;
       padding-top: 30px;
       border-left: 1px solid @gray1;
@@ -175,7 +177,7 @@
       order: 7;
       display: list-item;
       padding-top: 18px;
-      margin-left: 64px;
+      margin-left: 62px;
 
       a {
         .font-set(15px, 700, 24px);
@@ -184,6 +186,8 @@
 
     &:nth-child(8) {
       order: 8;
+      margin-top: 3px;
+      margin-right: 0;
     }
   }
 }
