--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -46,6 +46,6 @@
 
 @media (min-width: 1150px) {
   .page-footer__wrapper {
-    width: 1136px;
+    width: 1133px;
   }
 }
